fix font downloading if client already has font. fix lighthouse "Ensure text remains visible during webfont load"

--- a/static/style.css
+++ b/static/style.css
@@ -6,7 +6,8 @@
 
 @font-face {
     font-family: "Cascadia Code";
-    src: url("/CascadiaCode.woff2");
+    src: local("Cascadia Code"), url("/CascadiaCode.woff2");
+    font-display: swap;
 }
 
 *:focus-visible {
